# vesicle_nrss

./: .gitignore  LICENSE  README.md  SPEC.md  SPEC_EXPANSION_MULTI_VESICLE.md  pyproject.toml
src/vesicle_nrss/: __init__.py  _version.py  arguments.py  backend.py  cache.py  morphology.py  profile.py  ray_adapter.py  results.py  run.py  sweep.py  utils.py
tests/: test_backend_parity.py  test_centering.py  test_multiple_vesicle.py  test_orientation_radial.py  test_sweep_determinism.py  test_vdb_export.py  test_vfrac_supersample.py
